--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
+	"build": "npm install && npm start",
 	"start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
